bindings/RosuFFI.h

typedef struct GradualDifficulty GradualDifficulty;
typedef struct ScoreState ScoreState;
typedef struct PerformanceAttributes PerformanceAttributes;
typedef struct Difficulty Difficulty;
typedef struct Option_PerformanceAttributes Option_PerformanceAttributes;
typedef struct Option_DifficultyAttributes Option_DifficultyAttributes;
typedef struct BeatmapAttributesBuilder BeatmapAttributesBuilder;
typedef struct DifficultyAttributes DifficultyAttributes;
typedef struct GradualPerformance GradualPerformance;
typedef struct Option_u32 Option_u32;
struct Option_u32 { uint32_t variant; uint32_t some; };
struct ScoreState {
    uint32_t max_combo;
    uint32_t osu_large_tick_hits;
    uint32_t osu_small_tick_hits;
    uint32_t slider_end_hits;
    uint32_t n_geki;
    uint32_t n_katu;
    uint32_t n300;
    uint32_t n100;
    uint32_t n50;
    uint32_t misses;
    Option_u32 legacy_total_score;
};
struct PerformanceAttributes {
    uint32_t variant;
    union {
        OsuPerformanceAttributes osu;
        TaikoPerformanceAttributes taiko;
        CatchPerformanceAttributes catch_;
        ManiaPerformanceAttributes mania;
    } payload;
};
struct Option_PerformanceAttributes { uint32_t variant; PerformanceAttributes some; };
struct DifficultyAttributes {
    uint32_t variant;
    union {
        OsuDifficultyAttributes osu;
        TaikoDifficultyAttributes taiko;
        CatchDifficultyAttributes catch_;
        ManiaDifficultyAttributes mania;
    } payload;
};
struct Option_DifficultyAttributes { uint32_t variant; DifficultyAttributes some; };
void difficulty_cs(Difficulty * instance, float cs);
Option_PerformanceAttributes gradual_performance_last(GradualPerformance * instance, ScoreState state);
Option_DifficultyAttributes gradual_difficulty_next(GradualDifficulty * instance);
uint32_t gradual_performance_len(const GradualPerformance * instance);
void beatmap_attributes_builder_i_mods(BeatmapAttributesBuilder * instance, uint32_t mods);
void gradual_difficulty_destroy(const GradualDifficulty * instance);
void gradual_performance_destroy(const GradualPerformance * instance);