JavaRosuPP/src/main/java/desu/life/raw/RosuNative.java


    private static class difficulty_cs {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_FLOAT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("difficulty_cs").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void difficulty_cs(Difficulty *instance, float cs)
     * }
     */
    public static FunctionDescriptor difficulty_cs$descriptor() {
        return difficulty_cs.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void difficulty_cs(Difficulty *instance, float cs)
     * }
     */
    public static MethodHandle difficulty_cs$handle() {
        return difficulty_cs.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void difficulty_cs(Difficulty *instance, float cs)
     * }
     */
    public static MemorySegment difficulty_cs$address() {
        return difficulty_cs.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void difficulty_cs(Difficulty *instance, float cs)
     * }
     */
    public static void difficulty_cs(MemorySegment instance, float cs) {
        var mh$ = difficulty_cs.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("difficulty_cs", instance, cs);
            }
            mh$.invokeExact(instance, cs);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class gradual_performance_last {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Option_PerformanceAttributes.layout(),
            RosuNative.C_POINTER,
            ScoreState.layout()
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("gradual_performance_last").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * Option_PerformanceAttributes gradual_performance_last(GradualPerformance *instance, ScoreState state)
     * }
     */
    public static FunctionDescriptor gradual_performance_last$descriptor() {
        return gradual_performance_last.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * Option_PerformanceAttributes gradual_performance_last(GradualPerformance *instance, ScoreState state)
     * }
     */
    public static MethodHandle gradual_performance_last$handle() {
        return gradual_performance_last.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * Option_PerformanceAttributes gradual_performance_last(GradualPerformance *instance, ScoreState state)
     * }
     */
    public static MemorySegment gradual_performance_last$address() {
        return gradual_performance_last.ADDR;
    }

    /**
     * {@snippet lang=c :
     * Option_PerformanceAttributes gradual_performance_last(GradualPerformance *instance, ScoreState state)
     * }
     */
    public static MemorySegment gradual_performance_last(SegmentAllocator allocator, MemorySegment instance, MemorySegment state) {
        var mh$ = gradual_performance_last.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("gradual_performance_last", allocator, instance, state);
            }
            return (MemorySegment)mh$.invokeExact(allocator, instance, state);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class gradual_difficulty_next {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Option_DifficultyAttributes.layout(),
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("gradual_difficulty_next").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * Option_DifficultyAttributes gradual_difficulty_next(GradualDifficulty *instance)
     * }
     */
    public static FunctionDescriptor gradual_difficulty_next$descriptor() {
        return gradual_difficulty_next.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * Option_DifficultyAttributes gradual_difficulty_next(GradualDifficulty *instance)
     * }
     */
    public static MethodHandle gradual_difficulty_next$handle() {
        return gradual_difficulty_next.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * Option_DifficultyAttributes gradual_difficulty_next(GradualDifficulty *instance)
     * }
     */
    public static MemorySegment gradual_difficulty_next$address() {
        return gradual_difficulty_next.ADDR;
    }

    /**
     * {@snippet lang=c :
     * Option_DifficultyAttributes gradual_difficulty_next(GradualDifficulty *instance)
     * }
     */
    public static MemorySegment gradual_difficulty_next(SegmentAllocator allocator, MemorySegment instance) {
        var mh$ = gradual_difficulty_next.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("gradual_difficulty_next", allocator, instance);
            }
            return (MemorySegment)mh$.invokeExact(allocator, instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class gradual_performance_len {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_INT,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("gradual_performance_len").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t gradual_performance_len(const GradualPerformance *instance)
     * }
     */
    public static FunctionDescriptor gradual_performance_len$descriptor() {
        return gradual_performance_len.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t gradual_performance_len(const GradualPerformance *instance)
     * }
     */
    public static MethodHandle gradual_performance_len$handle() {
        return gradual_performance_len.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t gradual_performance_len(const GradualPerformance *instance)
     * }
     */
    public static MemorySegment gradual_performance_len$address() {
        return gradual_performance_len.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t gradual_performance_len(const GradualPerformance *instance)
     * }
     */
    public static int gradual_performance_len(MemorySegment instance) {
        var mh$ = gradual_performance_len.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("gradual_performance_len", instance);
            }
            return (int)mh$.invokeExact(instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_attributes_builder_i_mods {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_attributes_builder_i_mods").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_i_mods(BeatmapAttributesBuilder *instance, uint32_t mods)
     * }
     */
    public static FunctionDescriptor beatmap_attributes_builder_i_mods$descriptor() {
        return beatmap_attributes_builder_i_mods.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_i_mods(BeatmapAttributesBuilder *instance, uint32_t mods)
     * }
     */
    public static MethodHandle beatmap_attributes_builder_i_mods$handle() {
        return beatmap_attributes_builder_i_mods.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_i_mods(BeatmapAttributesBuilder *instance, uint32_t mods)
     * }
     */
    public static MemorySegment beatmap_attributes_builder_i_mods$address() {
        return beatmap_attributes_builder_i_mods.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void beatmap_attributes_builder_i_mods(BeatmapAttributesBuilder *instance, uint32_t mods)
     * }
     */
    public static void beatmap_attributes_builder_i_mods(MemorySegment instance, int mods) {
        var mh$ = beatmap_attributes_builder_i_mods.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_attributes_builder_i_mods", instance, mods);
            }
            mh$.invokeExact(instance, mods);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class gradual_difficulty_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("gradual_difficulty_destroy").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void gradual_difficulty_destroy(const GradualDifficulty *instance)
     * }
     */
    public static FunctionDescriptor gradual_difficulty_destroy$descriptor() {
        return gradual_difficulty_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void gradual_difficulty_destroy(const GradualDifficulty *instance)
     * }
     */
    public static MethodHandle gradual_difficulty_destroy$handle() {
        return gradual_difficulty_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void gradual_difficulty_destroy(const GradualDifficulty *instance)
     * }
     */
    public static MemorySegment gradual_difficulty_destroy$address() {
        return gradual_difficulty_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void gradual_difficulty_destroy(const GradualDifficulty *instance)
     * }
     */
    public static void gradual_difficulty_destroy(MemorySegment instance) {
        var mh$ = gradual_difficulty_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("gradual_difficulty_destroy", instance);
            }
            mh$.invokeExact(instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class gradual_performance_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER
        );
